[project]
name = "vehicle-deployment"
version = "0.0.1"
description = "An MLOps project for productionizing models live"
authors = [{name = "Bibhu Kumar Singh", email = "bibhukumarsingh355@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}